--- a/index.html
+++ b/index.html
@@ -92,9 +92,77 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="container-fluit mt-5">
+        <div class="row d-flex justify-content-center suscribir-index">
+          <div class="container col-12 col-md-4 text-center form-textindex" >
+            <h2>Mensaje en tu Correo</h2>
+            <p>Te enviaremos todas nuestras actividades y novedades</p>
+          </div>
+          <div class="container-fluit col-12 col-md-6">
+            <form action="" name="suscribite" netlify>
+              <div class="container">
+                <div class="row ">
+                  <div class="col-12 col-md-4">
+                    <!-- <label for="">Nombre</label> -->
+                    <input class="style_input" size="10" required maxlength="12" type="text" name="nombre" id="nombre" placeholder="Nombre">
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <!-- <label for="">Apellido</label> -->
+                    <input class="style_input" size="10" required maxlength="12" type="text" name="Apellido" id="Apellido" placeholder="Apellido">
+                  </div>
+                  <div class="col-12 d-flex justify-content-start">
+                    <!-- <label for="">Email</label> -->
+                    <input class="style_input" size="27" maxlength="40" required type="text" name="email" id="email" placeholder="Email">
+                  </div>
+                  <div class="col-12 col-md-8 d-flex justify-content-center">
+                    <input class="style_input-submit" type="submit" name="suscribite" value="Suscribite" >
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer>
-
+  <footer class="container-fluit footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <div class="row">
+            <a href="index.html" class="d-flex justify-content-center">
+              <img src="./img/logo iglesia sin techo - transparente (blanco).png" alt="logo iglesia" class="w-25"/>
+            </a>
+            <span class="fs-4 text-center ">Iglesia de Urquiza</span>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 d-flex justify-content-center">
+          <div class="row">
+            <h2 class="text-center mt-4 subt_footer">Contacto | Redes</h2>
+          <div class="d-flex flex-column align-content-center p-2">
+            <i class="bi bi-envelope-at icon-email fs-4">
+              <span class="span-icon fs-5">iglesia.villa.urquiza@gmail.com</span>
+            </i>
+            <i class="bi bi-whatsapp icon-w fs-3">
+              <span class="span-icon"> 11-2169-7373</span>
+            </i>
+          </div>
+          <div class="d-flex flex-row justify-content-around align-content-center p-2 fs-1">
+            <a href="https://www.facebook.com/search/top?q=iglesiadeurquiza" target="_blank">
+              <i class="bi bi-facebook px-3 icon-redes"></i>
+            </a>
+            <a href="https://www.youtube.com/@IGLESIADEURQUIZA" target="_blank">
+              <i class="bi bi-youtube px-3 icon-redes"></i>
+            </a>
+            <a href="https://www.instagram.com/iglesiadeurquiza/" target="_blank">
+              <i class="bi bi-instagram px-3 icon-redes"></i>
+            </a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
