--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="icon" href="../img/logo iglesia sin techo - transparente (2).png">
+    <link rel="icon" href="./img/logo-iglesia-sin-techo-transparente(negro).png">
 </head>
 <body>
     <header class="navbar navbar-expand-lg navbar-style">
@@ -17,8 +17,8 @@
           <a href="./index.html">
             <img
               class="navheader_logo"
-              src="./img/logo iglesia sin techo - transparente (blanco).png"
-              alt="Logo estilo escorpiano"
+              src="./img/logo-iglesia-sin-techo-transparente(blanco).png"
+              alt="Logo Iglesia Urquiza"
             />
           </a>
           <h1 class="navbar_h1 d-none d-lg-flex">Iglesia de Urquiza</h1>
@@ -43,7 +43,7 @@
                 <ul class="navbar-submenu" >
                   <li><a class="navbar-suba" href="#">Jovenes</a></li>
                   <li><a class="navbar-suba" href="#">Adolescentes</a></li>
-                  <li><a class="navbar-suba" href="#">Escuelita Bilica</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/escuela_biblica.html">Escuelita Bilica</a></li>
                   <li><a class="navbar-suba" href="#">Musica</a></li>
                 </ul>
               </li>
@@ -78,7 +78,7 @@
       <div class="container d-flex justify-content-center">
         <div class="row col-12 d-flex justify-content-center">
           <div class="oracion_testimonio text-center col-12 col-md-5">
-            <h2 class="text-center" >¿Tenés un tema de Oracón?</h2>
+            <h2 class="text-center" >¿Tenés un tema de Oración?</h2>
             <p class="text-center">Comparte con nosotros tu necesidad,<br>
                 estaremos orando por vos.</p>
             <a class="enlace_temtes" href="#">Dejar Oración</a>
@@ -131,8 +131,8 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="row">
-            <a href="index.html" class="d-flex justify-content-center">
-              <img src="./img/logo iglesia sin techo - transparente (blanco).png" alt="logo iglesia" class="w-25"/>
+            <a href="./index.html" class="d-flex justify-content-center">
+              <img src="./img/logo-iglesia-sin-techo-transparente(blanco).png" alt="logo iglesia" class="w-25"/>
             </a>
             <span class="fs-4 text-center ">Iglesia de Urquiza</span>
           </div>
