editando tarjetas escuelita biblica

--- a/subpaginas/escuela_biblica.html
+++ b/subpaginas/escuela_biblica.html
@@ -92,32 +92,34 @@
     <main>
       <section>
         <div class="container-fluit fondo_portada">
-          <div class="row p-2 d-flex justify-content-center">
-            <h2 class="text-center fs-1 mb-5" >Escuelita Biblica de Urquiza</h2>
-            <img src="../img/portada-escuelita-biblica.png" class="w-50 img-fluit" alt="portada escuelita bíblica">
+          <div class="row">
+            <img src="../img/escuelita_biblica/portada-logo.png" class="w-100 img-fluit" alt="portada escuelita bíblica">
           </div>
         </div>
       </section>
       <section class="container d-flex justify-content-center">
         <div class="container d-flex justify-content-center">
           <div class="row d-flex justify-content-center">
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
-                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <img src="../img/escuelita_biblica/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
                   <h3>Escuelita Bíblica 2022</h3>
                 </div>
                 <div class="lado reversa">
                   <h3>Escuelita Bíblica 2022</h3>
-                  <p>Comenzó la escuela bíblica y te mostramos un poquito de todo lo que disfrutaron los chicos!<br><br>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
+                  <p>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
                     ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
                   <div class="enlace_tarjeta-escuelita" >
-                    <a href="https://www.instagram.com/p/Cl6d1CgJvOs/?utm_source=ig_web_copy_link">Visitar</a>
+                    <span>visitanos en:</span>
+                    <a href="https://www.instagram.com/p/Cl6d1CgJvOs/?utm_source=ig_web_copy_link">
+                      <i class="bi bi-instagram px-3 icon-redes"></i> 
+                    </a>
                   </div>
                   </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -130,7 +132,139 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/escuelita_biblica/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Resumen Final</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Escuelita Bíblica 2022</h3>
+                  <p>Aprendimos que hay un equipo más importante del que podemos ser parte: el equipo de los Hijos de Dios!<br><br>“A todos los que le recibieron, a los que creen en su nombre, les dio el derecho de ser hijos de Dios” Juan 1:12</p>
+                  <div class="enlace_tarjeta-escuelita" >
+                    <span>visitanos en:</span>
+                    <a href="https://www.instagram.com/p/Cl6d1CgJvOs/?utm_source=ig_web_copy_link">
+                      <i class="bi bi-instagram px-3 icon-redes"></i> 
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Modo Mundial</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>La escuela bíblica ya está entrando en clima para el Mundial 2022!!</h3>
+                  <p>Y así como cada país tiene su bandera, nosotros como Hijos de Dios alzamos la bandera de Jesús!
+                    “Nosotros nos alegraremos por tu salvación, y en el nombre de nuestro Dios alzaremos bandera.” Salmo 20:5</p>
+                    <div class="enlace_tarjeta-escuelita" >
+                      <span>visitanos en:</span>
+                      <a href="https://www.instagram.com/p/CkmSYePJprg/?utm_source=ig_web_copy_link">
+                        <i class="bi bi-instagram px-3 icon-redes"></i> 
+                      </a>
+                    </div>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Día del Niño</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Dia del Niño 2022</h3>
+                  <p>Así fue nuestro festejo del Día del Niño!!!
+                    Gracias por acompañarnos! </p>
+                    <div class="enlace_tarjeta-escuelita" >
+                      <span>visitanos en:</span>
+                      <a href="https://www.instagram.com/p/ChvwvUcj75_/?utm_source=ig_web_copy_link">
+                        <i class="bi bi-instagram px-3 icon-redes"></i> 
+                      </a>
+                    </div>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Juego en Equipo</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Sábado Especial</h3>
+                  <p>Tiempo de juegos en equipos, fútbol, manualidad, almuerzo juntos, y lo más importante: un tiempo para cantar a Dios y aprender lo que nos enseña la Biblia.
+                    <br>“El que tiene al Hijo, tiene la vida; el que no tiene al Hijo de Dios no tiene la vida.” Juan 5:12</p>
+                    <div class="enlace_tarjeta-escuelita" >
+                      <span>visitanos en:</span>
+                      <a href="https://www.instagram.com/p/ChEDP6SD2Ix/?utm_source=ig_web_copy_link">
+                        <i class="bi bi-instagram px-3 icon-redes"></i> 
+                      </a>
+                    </div>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>jesús es tu Amigo</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>JESUS ES TU AMIGO QUE TE CONOCE</h3>
+                  <p>Jesus también conoce todo de vos: lo lindo, lo feo, lo vergonzoso y aún lo que vos no sabes sobre vos mismo! Pero lo más asombroso es que aunque conoce todo aún así te ama, y dio su vida por vos. </p>
+                  <div class="enlace_tarjeta-escuelita" >
+                    <span>visitanos en:</span>
+                    <a href="https://www.instagram.com/p/CRxeAMGBt3i/?utm_source=ig_web_copy_link">
+                      <i class="bi bi-instagram px-3 icon-redes"></i> 
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/escuelita_biblica/jeremias-31-3.png" class="img-fluit" alt="jeremias-31-3">
+                  <h3>Significado de “ETERNO”</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>ETERNO "que no tiene principio ni fin"</h3>
+                  <p>Así es el amor de Dios por vos y por mi. Cómo sabemos que es cierto? Lo demostró al dar a su hijo, Jesús, para salvarnos.</p>
+                  <div class="enlace_tarjeta-escuelita" >
+                    <span>visitanos en:</span>
+                    <a href="https://www.instagram.com/p/CRMls1whGTu/?utm_source=ig_web_copy_link">
+                      <i class="bi bi-instagram px-3 icon-redes"></i> 
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/escuelita_biblica/salmo-46-1.png" alt="inicio escuelita bíblica 2022">
+                  <h3>Dios cura a Naamán</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Dios está con vos y puede usarte!</h3>
+                  <p>La muchacha que trabajaba para la esposa de Naamán era una extranjera que había sido obligada a dejar su tierra, trabajaba como sierva y era chica de edad.</p>
+                  <div class="enlace_tarjeta-escuelita" >
+                    <span>sigue la historia en:</span>
+                    <a href="https://www.instagram.com/p/CQoq0xzBMi1/?utm_source=ig_web_copy_link">
+                      <i class="bi bi-instagram px-3 icon-redes"></i> 
+                    </a>|
+                    <a href="https://youtu.be/TEcF8IfnLBI">
+                      <i class="bi bi-youtube px-3 icon-redes"></i> 
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -143,7 +277,7 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -156,7 +290,7 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -169,7 +303,26 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/escuelita_biblica/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Escuelita Bíblica 2022</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Escuelita Bíblica 2022</h3>
+                  <p>Comenzó la escuela bíblica!!!<br><br>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
+                    ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
+                  <div class="enlace_tarjeta-escuelita" >
+                    <span>visitanos en:</span>
+                    <a href="https://www.instagram.com/p/Cl6d1CgJvOs/?utm_source=ig_web_copy_link">
+                      <i class="bi bi-instagram px-3 icon-redes"></i> 
+                    </a>
+                  </div>
+                  </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -182,7 +335,7 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -195,7 +348,7 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -208,7 +361,7 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -221,7 +374,7 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -234,7 +387,7 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
@@ -247,7 +400,59 @@
                 </div>
               </div>
             </article >
-            <article class="col-12 col-md-4 tarjeta_escuelita" >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Escuelita Bíblica 2022</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Escuelita Bíblica 2022</h3>
+                  <p>Comenzó la escuela bíblica y te mostramos un poquito de todo lo que disfrutaron los chicos!<br><br>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
+                    ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Escuelita Bíblica 2022</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Escuelita Bíblica 2022</h3>
+                  <p>Comenzó la escuela bíblica y te mostramos un poquito de todo lo que disfrutaron los chicos!<br><br>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
+                    ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Escuelita Bíblica 2022</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Escuelita Bíblica 2022</h3>
+                  <p>Comenzó la escuela bíblica y te mostramos un poquito de todo lo que disfrutaron los chicos!<br><br>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
+                    ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
+              <div class="tarjeta">
+                <div class="lado frontal">
+                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <h3>Escuelita Bíblica 2022</h3>
+                </div>
+                <div class="lado reversa">
+                  <h3>Escuelita Bíblica 2022</h3>
+                  <p>Comenzó la escuela bíblica y te mostramos un poquito de todo lo que disfrutaron los chicos!<br><br>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
+                    ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
+                </div>
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
                   <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
