avances en paginas

--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
               <li><a class="nav-link navbar-a activo-ul" href="./index.html">Inicio</a></li>
               <li><a class="nav-link navbar-a" href="#">Ministerio</a>
                 <ul class="navbar-submenu" >
-                  <li><a class="navbar-suba" href="#">Jovenes</a></li>
-                  <li><a class="navbar-suba" href="#">Adolescentes</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/jovenes.html">Jovenes</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/adolescentes.html">Adolescentes</a></li>
                   <li><a class="navbar-suba" href="./subpaginas/escuela_biblica.html">Escuelita Bilica</a></li>
-                  <li><a class="navbar-suba" href="#">Musica</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/musica.html">Musica</a></li>
                 </ul>
               </li>
-              <li><a class="nav-link navbar-a" href="#">Servicios</a></li>
+              <li><a class="nav-link navbar-a" href="./paginas/servicio.html">Servicios</a></li>
               <li><a class="nav-link navbar-a" href="#">Actividades</a>
                 <ul class="navbar-submenu" >
-                  <li><a class="navbar-suba" href="#">Estudio de La Biblia</a></li>
-                  <li><a class="navbar-suba" href="#">Cena del Señor</a></li>
-                  <li><a class="navbar-suba" href="#">Evangelización</a></li>
-                  <li><a class="navbar-suba" href="#">Actividades de los Sabados</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/estudio_de_la_biblia.html">Estudio de La Biblia</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/cena_del_señor.html">Cena del Señor</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/evangelizacion.html">Evangelización</a></li>
+                  <li><a class="navbar-suba" href="./subpaginas/actividades_de_los_sabados.html">Actividades de los Sabados</a></li>
                 </ul>
               </li>
-              <li><a class="nav-link navbar-a" href="./paginas/turnos.html">Galeria</a></li>
+              <li><a class="nav-link navbar-a" href="./paginas/galeria.html">Galeria</a></li>
             </ul>
           </nav>
         </div>
