--- a/subpaginas/adolescentes.html
+++ b/subpaginas/adolescentes.html
@@ -1,33 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/estilo_inicio.css">
-</head>
-<body>
-    <nav>
-        <ul class="menu_horizontal">
-            <li><a href="inicio.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <title>Inicio</title>
+    <script
+      src="https://kit.fontawesome.com/c50a312c0b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <link
+      rel="icon"
+      href="../img/logo-iglesia-sin-techo-transparente(negro).png"
+    />
+  </head>
+  <body>
+    <header class="navbar navbar-expand-lg navbar-style">
+      <div class="container navheader">
+        <a href="../index.html">
+          <img
+            class="navheader_logo"
+            src="../img/logo-iglesia-sin-techo-transparente(blanco).png"
+            alt="Logo Iglesia Urquiza"
+          />
+        </a>
+        <h1 class="navbar_h1 d-none d-lg-flex">Iglesia de Urquiza</h1>
+        <button
+          class="navbar-toggler color-iconbar"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon color-iconbar"></span>
+        </button>
+        <nav
+          class="navheader_nav nav collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
             <li>
-                <a href="ministerios.html">Ministerios</a></li>
-                <ul class="submenu_vertical">
-                    <li><a href="escuela_biblica.html">Escuela Bíblica</a></li>
-                    <li><a href="adolescentes.html">Adolescentes</a></li>
-                    <li><a href="jovenes.html">Jovenes</a></li>
-                    <li><a href="musica.html">Música</a></li>
-                </ul>
+              <a class="nav-link navbar-a activo-ul" href="../index.html"
+                >Inicio</a
+              >
+            </li>
             <li>
-                <a href="galeria.html">Galería</a></li>
-                <ul class="submenu_vertical">
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="videos.html">Videos</a></li>
-                </ul>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-</body>
-</html>
+              <a class="nav-link navbar-a" href="#">Ministerio</a>
+              <ul class="navbar-submenu">
+                <li><a class="navbar-suba" href="./jovenes.html">Jovenes</a></li>
+                <li><a class="navbar-suba" href="./adolescentes.html">Adolescentes</a></li>
+                <li><a class="navbar-suba" href="./escuela_biblica.html">Escuelita Bilica</a></li>
+                <li><a class="navbar-suba" href="./musica.html">Musica</a></li>
+              </ul>
+            </li>
+            <li><a class="nav-link navbar-a" href="../paginas/servicio.html">Servicios</a></li>
+            <li>
+              <a class="nav-link navbar-a" href="#">Actividades</a>
+              <ul class="navbar-submenu">
+                <li>
+                  <a class="navbar-suba" href="./estudio_de_la_biblia.html">Estudio de La Biblia</a>
+                </li>
+                <li><a class="navbar-suba" href="./cena_del_señor.html">Cena del Señor</a></li>
+                <li><a class="navbar-suba" href="./evangelizacion.html">Evangelización</a></li>
+                <li>
+                  <a class="navbar-suba" href="./actividades_de_los_sabados.html">Actividades de los Sabados</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a class="nav-link navbar-a" href="../paginas/galeria.html"
+                >Galeria</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="portada_adolescente d-flex justify-content-center" >
+        <img src="../img/logo_adolescente-transparente.png" alt="">
+      </section>
+    </main>
+    <footer class="container-fluit footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="row">
+              <a href="../index.html" class="d-flex justify-content-center">
+                <img src="../img/logo-iglesia-sin-techo-transparente(blanco).png" alt="logo iglesia" class="w-25"/>
+              </a>
+              <span class="fs-4 text-center ">Iglesia de Urquiza</span>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 d-flex justify-content-center">
+            <div class="row">
+              <h2 class="text-center mt-4 subt_footer">Contacto | Redes</h2>
+            <div class="d-flex flex-column align-content-center p-2">
+              <i class="bi bi-envelope-at icon-email fs-4">
+                <span class="span-icon fs-5">iglesia.villa.urquiza@gmail.com</span>
+              </i>
+              <i class="bi bi-whatsapp icon-w fs-3">
+                <span class="span-icon"> 11-2169-7373</span>
+              </i>
+            </div>
+            <div class="d-flex flex-row justify-content-around align-content-center p-2 fs-1">
+              <a href="https://www.facebook.com/search/top?q=iglesiadeurquiza" target="_blank">
+                <i class="bi bi-facebook px-3 icon-redes"></i>
+              </a>
+              <a href="https://www.youtube.com/@IGLESIADEURQUIZA" target="_blank">
+                <i class="bi bi-youtube px-3 icon-redes"></i>
+              </a>
+              <a href="https://www.instagram.com/iglesiadeurquiza/" target="_blank">
+                <i class="bi bi-instagram px-3 icon-redes"></i>
+              </a>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>  
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
+  </html>
