estilizando page edolescentes

--- a/subpaginas/adolescentes.html
+++ b/subpaginas/adolescentes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Inicio</title>
+    <title>Adolescentes</title>
     <script
       src="https://kit.fontawesome.com/c50a312c0b.js"
       crossorigin="anonymous"
@@ -90,9 +90,79 @@
       </div>
     </header>
     <main>
-      <section class="portada_adolescente d-flex justify-content-center" >
-        <img src="../img/logo_adolescente-transparente.png" alt="">
+      <section class="portada_adolescente" >
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md-6 d-flex justify-content-center">
+              <img class="w-50" src="../img/logo_adolescente-transparente.png" alt="logo adolescentes">
+            </div>
+            <div class="col-12 col-md-6 portada_adolescente-texto">
+              <h2 class="text-center mb-3">Romanos 12:2</h2>
+              <p class="fs-6 fs-lg-5 text-center">Y no vivan ya como vive todo el mundo. Al contrario, cambien de manera de ser y de pensar.<br><br> Así podrán saber qué es lo que Dios quiere, es decir, todo lo que es bueno, agradable y perfecto.</p>
+            </div>
+          </div>
+        </div>
       </section>
+      <section class="sec_lideres" >
+        <div class="container tar_lider">
+          <div class="col-12 d-flex justify-content-center mt-4 " >
+            <h2 class="tetxt-center" >Nuestros Lideres</h2>
+          </div>
+          <div class="row">
+            <div class="col-12 order-2 order-md-1 col-md-5 contenedor_tarjeta">
+              <div class="tarjeta_lider">
+                <div class="cover">
+                  <img src="../img/adolescentes/tarjeta_fede.png" alt="Federico Luciani">
+                  <div class="img__back"></div>
+                </div> 
+                <div class="descripcion">
+                  <h2 class="text-center" >Federico Luciani</h2>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 order-1 order-md-2 col-md-2 fs-5 d-flex justify-content-center align-items-center" >
+              <p class="text-center mision_lider" >Nuestros Lideres son los encargados de guiar e instruir espirutualmente a nuestros adolescentes</p>
+            </div>
+            <div class="col-12 order-3 col-md-5 contenedor_tarjeta">
+              <div class="tarjeta_lider">
+                <div class="cover">
+                  <img src="../img/adolescentes/tarjeta_mayi.png" alt="Mayi Pérez">
+                  <div class="img__back"></div>
+                </div> 
+                <div class="descripcion">
+                  <h2 class="text-center" >Mayi Pérez</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- <section>
+        <div class="container">
+          <div class="row">
+            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
+              <div class="video_adoles-video">
+                <video src="../img/adolescentes/resumen_2022.mp4"></video>  
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
+              <div class="video_adoles-video">
+                <video src="../img/adolescentes/bautizmo_2022.mp4"></video>  
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
+              <div class="tarjeta_video-video">
+                <video src="../img/adolescentes/dia_del_amigo.mp4"></video>  
+              </div>
+            </article >
+            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
+              <div class="tarjeta_video-video">
+                <video src="../img/adolescentes/campa_2022.mp4"></video>  
+              </div>
+            </article >
+          </div>
+        </div>
+      </section> -->
     </main>
     <footer class="container-fluit footer">
       <div class="container">
