--- a/subpaginas/escuela_biblica.html
+++ b/subpaginas/escuela_biblica.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Inicio</title>
+    <meta aria-describedby="escuelita bíblica de urquiza, se encarga de orientar a los niños en el camino de nuestro padre celestial" >
+    <title>Escuelita Bíblica</title>
     <script
       src="https://kit.fontawesome.com/c50a312c0b.js"
       crossorigin="anonymous"
@@ -101,41 +102,23 @@
         <div class="container d-flex justify-content-center">
           <div class="row d-flex justify-content-center">
             <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
-              <div class="tarjeta">
-                <div class="lado frontal">
-                  <img src="../img/escuelita_biblica/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
-                  <h3>Escuelita Bíblica 2022</h3>
+              <div class="tarjeta_video" >
+                <div class="tarjeta_video-video" >
+                  <iframe width="290" height="310" src="https://www.youtube.com/embed/8dXkOJqRpmE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-                <div class="lado reversa">
-                  <h3>Escuelita Bíblica 2022</h3>
-                  <p>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
-                    ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
-                  <div class="enlace_tarjeta-escuelita" >
-                    <span>visitanos en:</span>
-                    <a href="https://www.instagram.com/p/Cl6d1CgJvOs/?utm_source=ig_web_copy_link">
-                      <i class="bi bi-instagram px-3 icon-redes"></i> 
-                    </a>
-                  </div>
-                  </div>
               </div>
             </article >
             <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
-              <div class="tarjeta">
-                <div class="lado frontal">
-                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
-                  <h3>Escuelita Bíblica 2022</h3>
-                </div>
-                <div class="lado reversa">
-                  <h3>Escuelita Bíblica 2022</h3>
-                  <p>Comenzó la escuela bíblica y te mostramos un poquito de todo lo que disfrutaron los chicos!<br><br>Nos vamos a estar reuniendo los primeros sábados de 11 a 13:30 hs y los segundos, terceros y cuartos domingos de 10:30 a 12:00.
-                    ¡Los esperamos!<br><br>“Jesús dijo: «Dejen que los niños vengan a mí…».”<br>Mateo 19:14</p>
+              <div class="tarjeta_video">
+                <div class="tarjeta_video-video">
+                  <iframe width="290" height="310" src="https://www.youtube.com/embed/96RnQLeRgxo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
               </div>
             </article >
             <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
-                  <img src="../img/escuelita_biblica/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <img src="../img/escuelita_biblica/resumen_final.jpeg" alt="inicio escuelita bíblica 2022">
                   <h3>Resumen Final</h3>
                 </div>
                 <div class="lado reversa">
@@ -153,7 +136,7 @@
             <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
-                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <img src="../img/escuelita_biblica/modo_mundial.png" alt="inicio escuelita bíblica 2022">
                   <h3>Modo Mundial</h3>
                 </div>
                 <div class="lado reversa">
@@ -172,7 +155,7 @@
             <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
-                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <img src="../img/escuelita_biblica/dia_del_niño.png" alt="inicio escuelita bíblica 2022">
                   <h3>Día del Niño</h3>
                 </div>
                 <div class="lado reversa">
@@ -191,7 +174,7 @@
             <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
-                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <img src="../img/escuelita_biblica/juego_en_equipo.png" alt="inicio escuelita bíblica 2022">
                   <h3>Juego en Equipo</h3>
                 </div>
                 <div class="lado reversa">
@@ -210,7 +193,7 @@
             <article class="col-12 col-md-6 col-lg-4 tarjeta_escuelita" >
               <div class="tarjeta">
                 <div class="lado frontal">
-                  <img src="../img/inicio-escuelita-biblica-2022.jpg" alt="inicio escuelita bíblica 2022">
+                  <img src="../img/escuelita_biblica/jesus_tu_amigo.png" alt="inicio escuelita bíblica 2022">
                   <h3>jesús es tu Amigo</h3>
                 </div>
                 <div class="lado reversa">
